--- a/CharactorSelectorApi/SurveyApi.Tests/SurveyApi.Tests.csproj
+++ b/CharactorSelectorApi/SurveyApi.Tests/SurveyApi.Tests.csproj
@@ -5,7 +5,7 @@
 
     <IsPackable>false</IsPackable>
 
-    <RootNamespace>CharacterSelectorApi.Tests</RootNamespace>
+    <RootNamespace>SurveyApi.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SurceyApi\SurceyApi.csproj" />
+    <ProjectReference Include="..\SurveyApi\SurveyApi.csproj" />
   </ItemGroup>
 
 </Project>
